namespaces/jenkins-prod/Ingress/jenkins-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-prod-ingress
  labels:
    app: jenkins-prod-ingress
    environment: prod
  namespace: jenkins-prod-ns
spec:
  tls:
  - hosts:
    - jenkins-dkc.com
    secretName: jenkins-prod-certificate-selfsigned
  rules:
  - host: jenkins-dkc.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-prod-service
            port: 
              name: jks-prd-def
